--- a/txbridge/pom.xml
+++ b/txbridge/pom.xml
@@ -31,6 +31,9 @@
             -Djboss.modules.system.pkgs=org.jboss.byteman
             -javaagent:${byteman.home}/byteman.jar=port:9091,listener:true,sys:${byteman.home}/byteman-dtest.jar
         </byteman.server.jvm.args>
+        <server.jvm.args>
+            ${jvm.args.other} ${jvm.args.memory} ${byteman.server.jvm.args} ${jvm.args.debug}
+        </server.jvm.args>
     </properties>
     <build>
         <plugins>
@@ -300,7 +303,7 @@
 							<!-- System properties passed to test cases -->
 							<systemPropertyVariables>
 								<!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
-								<server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${byteman.server.jvm.args} ${jvm.args.debug}</server.jvm.args>
+								<server.jvm.args>${server.jvm.args}</server.jvm.args>
 								<java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
 								<node.address>localhost</node.address>
 							</systemPropertyVariables>
@@ -370,7 +373,7 @@
 							<!-- System properties passed to test cases -->
 							<systemPropertyVariables>
 								<!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
-								<server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${ipv6.server.jvm.args} ${byteman.server.jvm.args} ${jvm.args.debug}</server.jvm.args>
+								<server.jvm.args>${server.jvm.args} ${ipv6.server.jvm.args}</server.jvm.args>
 								<java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
 								<node.address>[::1]</node.address>
 							</systemPropertyVariables>
@@ -421,6 +424,14 @@
 				</dependency>
 			</dependencies>
 		</profile>
+        <profile>
+            <id>codeCoverage</id>
+            <properties>
+                <server.jvm.args>
+                    ${jvm.args.other} ${jvm.args.memory} ${byteman.server.jvm.args} ${jvm.args.debug} ${jvm.args.jacoco}
+                </server.jvm.args>
+            </properties>
+        </profile>
         <profile>
             <id>release</id>
             <build>
