JBTM-2615 Exclude the org.omg.CORBA.* classes from the IDLJ orb configuration

--- a/ArjunaJTS/idl/idlj/pom.xml
+++ b/ArjunaJTS/idl/idlj/pom.xml
@@ -38,6 +38,11 @@
           </goals>
         </execution>
       </executions>
+      <configuration>
+        <excludes>
+          <exclude>org/omg/CORBA/*</exclude>
+        </excludes>
+      </configuration>
       </plugin>
 
       <plugin>
