JBTM-2612 Updated to install the JDBC module

--- a/ArjunaJTA/jdbc/pom.xml
+++ b/ArjunaJTA/jdbc/pom.xml
@@ -59,7 +59,13 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
+    <plugins>
+      <plugin>
+        <inherited>false</inherited>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
   </build>
 
   <dependencies>
@@ -148,6 +154,24 @@
     </dependency>
   </dependencies>
   <profiles>
+      <profile>
+          <id>release</id>
+          <build>
+              <plugins>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-install-plugin</artifactId>
+                      <executions>
+                          <execution>
+                              <id>default-install</id>
+                              <phase>install</phase>
+                          </execution>
+                      </executions>
+                      <inherited>false</inherited>
+                  </plugin>
+              </plugins>
+          </build>
+      </profile>
     <profile>
       <id>codeCoverage</id>
       <build>
