--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,11 @@
     <pluginManagement>
       <plugins>
         <plugin>
+            <groupId>org.jboss.byteman</groupId>
+            <artifactId>byteman-rulecheck-maven-plugin</artifactId>
+            <version>${version.org.jboss.byteman}</version>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
           <configuration>
@@ -233,6 +238,7 @@
         <plugin>
           <groupId>org.sonatype.plugins</groupId>
           <artifactId>nexus-staging-maven-plugin</artifactId>
+          <version>${version.org.sonatype.plugins.nexus-staging-maven-plugin}</version>
           <extensions>true</extensions>
           <configuration>
             <serverId>jboss-releases-repository</serverId>
@@ -457,6 +463,7 @@
     <version.org.jacoco>0.7.2.201409121644</version.org.jacoco>
     <version.org.jacoco>0.6.3.201306030806</version.org.jacoco>
 -->
+    <version.org.sonatype.plugins.nexus-staging-maven-plugin>1.6.6</version.org.sonatype.plugins.nexus-staging-maven-plugin>
   </properties>
   <modules>
     <module>tools</module>
