--- a/qa/pom.xml
+++ b/qa/pom.xml
@@ -191,6 +191,11 @@
 			<version>${version.org.jboss.netty}</version>
 		</dependency>
 		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${version.log4j}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jboss.spec.javax.transaction</groupId>
 			<artifactId>jboss-transaction-api_1.2_spec</artifactId>
 			<version>1.0.0.Final</version>
