--- a/osgi/jta/pom.xml
+++ b/osgi/jta/pom.xml
@@ -238,6 +238,24 @@
    </plugins>
    </build>
    <profiles>
+      <profile>
+          <id>release</id>
+          <build>
+              <plugins>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-install-plugin</artifactId>
+                      <executions>
+                          <execution>
+                              <id>default-install</id>
+                              <phase>install</phase>
+                          </execution>
+                      </executions>
+                      <inherited>false</inherited>
+                  </plugin>
+              </plugins>
+          </build>
+     </profile>
 	   <profile>
 		   <id>arq-karaf-embedded</id>
 		   <activation>
