JBTM-2667 Close the transactional driver XA connection too for non-XA modifier connections

--- a/qa/pom.xml
+++ b/qa/pom.xml
@@ -228,6 +228,16 @@
 	</dependencies>
 
   <profiles>
+	<profile>
+		<id>postgresql</id>
+		<dependencies>
+			<dependency>
+				<groupId>postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>${version.postgresql}</version>
+			</dependency>
+		</dependencies>
+	</profile>
     <profile>
       <id>IDE</id>
       <build>
