--- a/ArjunaJTA/jdbc/pom.xml
+++ b/ArjunaJTA/jdbc/pom.xml
@@ -54,6 +54,7 @@
               <exclude>**/DBPlugin.java</exclude>
               <exclude>**/*JNDISetup.java</exclude>
               <exclude>**/*SimpleJdbcTest.java</exclude>
+              <exclude>**/*StableConnections.java</exclude>
             </excludes>
           </configuration>
         </plugin>
@@ -154,6 +155,16 @@
     </dependency>
   </dependencies>
   <profiles>
+	<profile>
+		<id>postgresql</id>
+		<dependencies>
+			<dependency>
+				<groupId>postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>${version.postgresql}</version>
+			</dependency>
+		</dependencies>
+	</profile>
       <profile>
           <id>release</id>
           <build>
